--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -264,6 +264,8 @@
   <ItemGroup>
     <None Include="src\shaders\lightprobe_convolution.frag" />
     <None Include="src\shaders\lightprobe_convolution.vert" />
+    <None Include="src\shaders\reflectionprobe_importance_sampling.frag" />
+    <None Include="src\shaders\reflectionprobe_importance_sampling.vert" />
     <None Include="src\shaders\terrain.vert" />
     <None Include="src\shaders\oldModel.frag" />
     <None Include="src\shaders\model.vert" />
