--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -346,6 +346,8 @@
     <None Include="src\shaders\pbr_model.frag" />
     <None Include="src\shaders\lightprobe_convolution.vert" />
     <None Include="src\shaders\lightprobe_convolution.frag" />
+    <None Include="src\shaders\reflectionprobe_importance_sampling.vert" />
+    <None Include="src\shaders\reflectionprobe_importance_sampling.frag" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\awesomeface.png">
