--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -348,6 +348,8 @@
     <None Include="src\shaders\lightprobe_convolution.frag" />
     <None Include="src\shaders\reflectionprobe_importance_sampling.vert" />
     <None Include="src\shaders\reflectionprobe_importance_sampling.frag" />
+    <None Include="src\shaders\prebrdf.vert" />
+    <None Include="src\shaders\prebrdf.frag" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\awesomeface.png">
