--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -269,12 +269,9 @@
     <None Include="src\shaders\reflectionprobe_importance_sampling.frag" />
     <None Include="src\shaders\reflectionprobe_importance_sampling.vert" />
     <None Include="src\shaders\terrain.vert" />
-    <None Include="src\shaders\oldModel.frag" />
-    <None Include="src\shaders\model.vert" />
     <None Include="src\shaders\pbr_model.frag" />
-    <None Include="src\shaders\postprocess.frag" />
-    <None Include="src\shaders\postprocess.vert" />
-    <None Include="src\shaders\model.frag" />
+    <None Include="src\shaders\gammaCorrect.frag" />
+    <None Include="src\shaders\gammaCorrect.vert" />
     <None Include="src\shaders\pbr_model.vert" />
     <None Include="src\shaders\shadowmap.frag" />
     <None Include="src\shaders\shadowmap.vert" />
