--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -347,6 +347,8 @@
     <None Include="src\shaders\reflectionprobe_importance_sampling.frag" />
     <None Include="src\shaders\prebrdf.vert" />
     <None Include="src\shaders\prebrdf.frag" />
+    <None Include="src\shaders\post_process\copy.vert" />
+    <None Include="src\shaders\post_process\copy.frag" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\awesomeface.png">
