--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -333,8 +333,8 @@
   <ItemGroup>
     <None Include="src\shaders\terrain.vert" />
     <None Include="src\shaders\terrain.frag" />
-    <None Include="src\shaders\gammaCorrect.frag" />
-    <None Include="src\shaders\gammaCorrect.vert" />
+    <None Include="src\shaders\post_process\gamma\gammaCorrect.frag" />
+    <None Include="src\shaders\post_process\gamma\gammaCorrect.vert" />
     <None Include="src\shaders\skybox.frag" />
     <None Include="src\shaders\skybox.vert" />
     <None Include="src\shaders\shadowmap.vert" />
