--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClInclude Include="src\graphics\ibl\ReflectionProbe.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\graphics\renderer\renderpass\defferred\DeferredGeometryPass.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\graphics\shader.cpp">
@@ -327,6 +330,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\graphics\ibl\ReflectionProbe.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\graphics\renderer\renderpass\defferred\DeferredGeometryPass.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
