--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="src\graphics\ibl\ReflectionProbe.h" />
     <ClInclude Include="src\graphics\renderer\renderpass\forward\ForwardProbePass.h" />
     <ClInclude Include="src\graphics\ibl\ProbeManager.h" />
+    <ClInclude Include="src\platform\OpenGL\Framebuffers\GBuffer.h" />
     <ClInclude Include="src\utils\loaders\ShaderLoader.h" />
     <ClInclude Include="src\graphics\camera\ICamera.h" />
     <ClInclude Include="src\graphics\renderer\renderpass\forward\ForwardLightingPass.h" />
@@ -207,6 +208,7 @@
     <ClCompile Include="src\graphics\ibl\ReflectionProbe.cpp" />
     <ClCompile Include="src\graphics\renderer\renderpass\forward\ForwardProbePass.cpp" />
     <ClCompile Include="src\graphics\ibl\ProbeManager.cpp" />
+    <ClCompile Include="src\platform\OpenGL\Framebuffers\GBuffer.cpp" />
     <ClCompile Include="src\utils\loaders\ShaderLoader.cpp" />
     <ClCompile Include="src\graphics\renderer\renderpass\forward\ForwardLightingPass.cpp" />
     <ClCompile Include="src\graphics\renderer\renderpass\PostProcessPass.cpp" />
@@ -269,26 +271,16 @@
     <ClCompile Include="src\graphics\texture\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\shaders\lightprobe_convolution.frag" />
-    <None Include="src\shaders\lightprobe_convolution.vert" />
-    <None Include="src\shaders\post_process\copy.frag" />
-    <None Include="src\shaders\post_process\copy.vert" />
-    <None Include="src\shaders\post_process\fxaa\fxaa.frag" />
-    <None Include="src\shaders\post_process\fxaa\fxaa.vert" />
-    <None Include="src\shaders\prebrdf.frag" />
-    <None Include="src\shaders\prebrdf.vert" />
-    <None Include="src\shaders\reflectionprobe_importance_sampling.frag" />
-    <None Include="src\shaders\reflectionprobe_importance_sampling.vert" />
-    <None Include="src\shaders\terrain.vert" />
-    <None Include="src\shaders\pbr_model.frag" />
-    <None Include="src\shaders\post_process\gamma\gammaCorrect.frag" />
-    <None Include="src\shaders\post_process\gamma\gammaCorrect.vert" />
-    <None Include="src\shaders\pbr_model.vert" />
-    <None Include="src\shaders\shadowmap.frag" />
-    <None Include="src\shaders\shadowmap.vert" />
-    <None Include="src\shaders\skybox.frag" />
-    <None Include="src\shaders\skybox.vert" />
-    <None Include="src\shaders\terrain.frag" />
+    <None Include="src\shaders\lightprobe_convolution.glsl" />
+    <None Include="src\shaders\post_process\copy.glsl" />
+    <None Include="src\shaders\post_process\fxaa.glsl" />
+    <None Include="src\shaders\prebrdf.glsl" />
+    <None Include="src\shaders\reflectionprobe_importance_sampling.glsl" />
+    <None Include="src\shaders\terrain.glsl" />
+    <None Include="src\shaders\post_process\gammaCorrect.glsl" />
+    <None Include="src\shaders\pbr_model.glsl" />
+    <None Include="src\shaders\shadowmap.glsl" />
+    <None Include="src\shaders\skybox.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\awesomeface.png" />
