--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -286,9 +286,9 @@ xcopy /Y /S "$(ProjectDir)src\shaders\*.*" "$(OutDir)src\shaders\"</Command>
     <None Include="src\shaders\post_process\fxaa.glsl" />
     <None Include="src\shaders\prebrdf.glsl" />
     <None Include="src\shaders\reflectionprobe_importance_sampling.glsl" />
-    <None Include="src\shaders\terrain.glsl" />
+    <None Include="src\shaders\forward\pbr_terrain.glsl" />
     <None Include="src\shaders\post_process\gammaCorrect.glsl" />
-    <None Include="src\shaders\pbr_model.glsl" />
+    <None Include="src\shaders\forward\pbr_model.glsl" />
     <None Include="src\shaders\shadowmap.glsl" />
     <None Include="src\shaders\skybox.glsl" />
   </ItemGroup>
