--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -186,6 +186,12 @@
     <ClInclude Include="src\graphics\renderer\renderpass\defferred\DeferredLightingPass.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\thread\thread_pool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\thread\spin_lock.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\graphics\shader.cpp">
@@ -345,6 +351,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\graphics\renderer\renderpass\defferred\DeferredLightingPass.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\thread\thread_pool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
