--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -192,6 +192,12 @@
     <ClInclude Include="src\thread\spin_lock.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\utils\json\typeProcess.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\utils\json\json_type.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\graphics\shader.cpp">
@@ -354,6 +360,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\thread\thread_pool.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\utils\json\typeProcess.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
