--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -213,6 +213,9 @@
     <ClInclude Include="src\physics\fluid\SPHKernel.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\utils\profile\profile.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\graphics\shader.cpp">
@@ -393,6 +396,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\physics\fluid\SPHKernel.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\utils\profile\profile.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
